# motorhat_script

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
docs/adr/: ADR_001_motorhat_control_architecture.md
src/: __init__.py  config.py
src/application/: __init__.py  commands.py  motor_port.py  motor_service.py
src/cli/: __init__.py  __main__.py
src/domain/: __init__.py  motor.py
src/infrastructure/: __init__.py  motorhat_adapter.py
src/motorhat_script.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_repo_root_cli.py
tests/unit/: __init__.py  test_cli_main.py  test_domain.py  test_motor_service.py  test_motorhat_adapter.py  test_repo_root_cli_shim.py
